Layout bugs fix

--- a/src/styles/componentStyles/header.scss
+++ b/src/styles/componentStyles/header.scss
@@ -53,6 +53,22 @@
         &:last-child {
           margin-right: 0px;
         }
+        .cartBtn {
+          position: relative;
+          z-index: 0;
+          svg {
+            position: absolute;
+            bottom:-4px;
+            right: -4px;
+            z-index: 1;
+            text {
+              font-family: 'Montserrat';
+              font-weight: 500;
+              font-size: 10px;
+              text-transform: capitalize;
+            }
+          }
+        }
       }
       img {
         width: 15px;
