--- a/src/styles/generalStyles/media.scss
+++ b/src/styles/generalStyles/media.scss
@@ -179,7 +179,8 @@
   .categories {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
+    column-gap: 20px;
+    margin-bottom: 20px;
   }
   .swiper-button-1, .swiper-button-2 {
     .title {
@@ -294,6 +295,15 @@
       }
     } 
   }
+  .books {
+    .categories {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 30px;
+      margin-bottom: 20px;
+    }
+  }
+  
   .books__list {
     .books__item {
       .cover {
